[gd_scene load_steps=44 format=3 uid="uid://dgryxobep2mhd"]

[ext_resource type="Texture2D" uid="uid://ml86fs1uhoev" path="res://assets/enemy/Turtle/Turtle_Guard_In.png" id="1_2gx6n"]
[ext_resource type="Script" uid="uid://couki1dh63g56" path="res://Entities/enemies/Common/Turtle/turtle.gd" id="1_0021k"]
[ext_resource type="Texture2D" uid="uid://c06k0cly6ri2k" path="res://assets/enemy/Turtle/Turtle_Guard_Out.png" id="2_0021k"]
[ext_resource type="Resource" uid="uid://cra10rpls4p4t" path="res://Entities/enemies/Common/Turtle/TurtleStat.tres" id="2_c2ajo"]
[ext_resource type="Texture2D" uid="uid://c4frg82cidujv" path="res://assets/enemy/Turtle/Turtle_Idle.png" id="3_6xlya"]
[ext_resource type="Texture2D" uid="uid://djldeh1x5j82j" path="res://assets/enemy/Turtle/Turtle_Walk.png" id="4_jtobv"]
[ext_resource type="PackedScene" uid="uid://dc3v1kmk4vbwx" path="res://Components/Enemies/Locomotion/Movement_Component/movement_component.tscn" id="6_4863w"]
[ext_resource type="PackedScene" uid="uid://cwj7bijrp7jiv" path="res://Components/Enemies/Locomotion/Wander_Component/wander_component.tscn" id="7_6bgxp"]
[ext_resource type="PackedScene" uid="uid://k76vye5mtty1" path="res://Components/Common/Knockback_Component/knockback_component.tscn" id="7_c2ajo"]
[ext_resource type="PackedScene" uid="uid://drenvy30uh7mq" path="res://Components/Common/Health_Component/health_component.tscn" id="8_6bgxp"]
[ext_resource type="PackedScene" uid="uid://y7a41xekksbp" path="res://Components/Common/Hitbox_Component/hitbox_component.tscn" id="9_peqer"]
[ext_resource type="PackedScene" uid="uid://bcp8se18liu1" path="res://Components/Common/Death_Component/death_component.tscn" id="11_cx5wt"]
[ext_resource type="PackedScene" uid="uid://cqmc7ebhwjn8f" path="res://Components/Enemies/Combat/ContactDamage_Component/contact_damage_component.tscn" id="12_dl7wn"]

[sub_resource type="AtlasTexture" id="AtlasTexture_svdd1"]
atlas = ExtResource("1_2gx6n")
region = Rect2(0, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_mirdi"]
atlas = ExtResource("1_2gx6n")
region = Rect2(320, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_yfqnd"]
atlas = ExtResource("1_2gx6n")
region = Rect2(640, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_bx4hj"]
atlas = ExtResource("1_2gx6n")
region = Rect2(960, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_g3uu3"]
atlas = ExtResource("1_2gx6n")
region = Rect2(1280, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_r18j4"]
atlas = ExtResource("1_2gx6n")
region = Rect2(1600, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_x3bwp"]
atlas = ExtResource("2_0021k")
region = Rect2(0, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_dqfuj"]
atlas = ExtResource("2_0021k")
region = Rect2(320, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_2nhqx"]
atlas = ExtResource("2_0021k")
region = Rect2(640, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_0fefd"]
atlas = ExtResource("3_6xlya")
region = Rect2(0, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_fqtdk"]
atlas = ExtResource("3_6xlya")
region = Rect2(320, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_l0lgi"]
atlas = ExtResource("3_6xlya")
region = Rect2(640, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_lipxd"]
atlas = ExtResource("3_6xlya")
region = Rect2(960, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_xstsd"]
atlas = ExtResource("3_6xlya")
region = Rect2(1280, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_vkxfb"]
atlas = ExtResource("3_6xlya")
region = Rect2(1600, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_b45u8"]
atlas = ExtResource("3_6xlya")
region = Rect2(1920, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_xn7h3"]
atlas = ExtResource("3_6xlya")
region = Rect2(2240, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_6nm3c"]
atlas = ExtResource("3_6xlya")
region = Rect2(2560, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_820dd"]
atlas = ExtResource("3_6xlya")
region = Rect2(2880, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_7mcdx"]
atlas = ExtResource("4_jtobv")
region = Rect2(0, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_u4udr"]
atlas = ExtResource("4_jtobv")
region = Rect2(320, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_64dgg"]
atlas = ExtResource("4_jtobv")
region = Rect2(640, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_1axn6"]
atlas = ExtResource("4_jtobv")
region = Rect2(960, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_3i3kq"]
atlas = ExtResource("4_jtobv")
region = Rect2(1280, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_m5uu6"]
atlas = ExtResource("4_jtobv")
region = Rect2(1600, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_4p7sy"]
atlas = ExtResource("4_jtobv")
region = Rect2(1920, 0, 320, 320)

[sub_resource type="SpriteFrames" id="SpriteFrames_2mvqj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_svdd1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mirdi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yfqnd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bx4hj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g3uu3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r18j4")
}],
"loop": false,
"name": &"guard_in",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x3bwp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dqfuj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2nhqx")
}],
"loop": false,
"name": &"guard_out",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0fefd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fqtdk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l0lgi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lipxd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xstsd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vkxfb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b45u8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xn7h3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6nm3c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_820dd")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7mcdx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u4udr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_64dgg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1axn6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3i3kq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m5uu6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4p7sy")
}],
"loop": false,
"name": &"walk",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0021k"]
radius = 74.0
height = 228.0

[sub_resource type="CircleShape2D" id="CircleShape2D_6xlya"]
radius = 80.024994

[sub_resource type="CircleShape2D" id="CircleShape2D_jtobv"]
radius = 54.0

[node name="Turtle" type="CharacterBody2D" node_paths=PackedStringArray("movement_component") groups=["enemy"]]
position = Vector2(1, 0)
scale = Vector2(0.5, 0.5)
collision_mask = 67
motion_mode = 1
wall_min_slide_angle = 0.017453292
script = ExtResource("1_0021k")
TurtleStats = ExtResource("2_c2ajo")
movement_component = NodePath("Components/MovementComponent")

[node name="cooldown" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="Guard_in" type="Timer" parent="."]
one_shot = true

[node name="Attack_Duration" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_2mvqj")
animation = &"guard_out"
frame = 2
frame_progress = 1.0
offset = Vector2(0, -15)

[node name="Components" type="Node2D" parent="."]

[node name="WanderComponent" parent="Components" node_paths=PackedStringArray("movement_component") instance=ExtResource("7_6bgxp")]
movement_component = NodePath("../MovementComponent")

[node name="MovementComponent" parent="Components" node_paths=PackedStringArray("body") instance=ExtResource("6_4863w")]
body = NodePath("../..")

[node name="KnockbackComponent" parent="Components" node_paths=PackedStringArray("body") instance=ExtResource("7_c2ajo")]
body = NodePath("../..")

[node name="HealthComponent" parent="Components" node_paths=PackedStringArray("death_component") instance=ExtResource("8_6bgxp")]
death_component = NodePath("../DeathComponent")

[node name="HitboxComponent" parent="Components" node_paths=PackedStringArray("health_component", "knockback_component") instance=ExtResource("9_peqer")]
health_component = NodePath("../HealthComponent")
knockback_component = NodePath("../KnockbackComponent")

[node name="hitbox" type="CollisionShape2D" parent="Components/HitboxComponent"]
position = Vector2(0, -18)
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_0021k")

[node name="DeathComponent" parent="Components" instance=ExtResource("11_cx5wt")]

[node name="ContactDamageComponent" parent="Components" instance=ExtResource("12_dl7wn")]

[node name="ContactDamage_Collision" type="CollisionShape2D" parent="Components/ContactDamageComponent"]
position = Vector2(-10, -44)
shape = SubResource("CircleShape2D_6xlya")

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2(0, -34)
rotation = -1.5707964
shape = SubResource("CircleShape2D_jtobv")

[connection signal="timeout" from="cooldown" to="." method="_on_cooldown_timeout"]
[connection signal="timeout" from="Guard_in" to="." method="_on_guard_in_timeout"]
[connection signal="timeout" from="Attack_Duration" to="." method="_on_attack_duration_timeout"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
